added # to interaction

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li class="navigation__item navigation__link">
                     <a class="navigation__link" href="#cosWiecej">Inne zainteresowania</a></li>
                 <li class="navigation__item navigation__link"><a class="navigation__link" href="#ulubione">Ulubione</a></li>
-                <li class="navigation__item navigation__link"><a class="navigation__link"  href="interakcja"> Interakcja</a></li>
+                <li class="navigation__item navigation__link"><a class="navigation__link"  href="#interakcja"> Interakcja</a></li>
             </ul>
         </nav>
 
