--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <main>
             <header class="section section--centered">
                 <img class="section__image" width="100" height="100" src="images/bart.jpg" alt="Bartek Owczarzak">
+                <link rel="icon" href="images/miniMark.jpg">
                 <meta property="og:image" content="images/share.jpg">
                 <h1 class="section__header">Bartosz Owczarzak</h1>
             </header>
