changed button look

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/section.css" rel="stylesheet">
     <link href="css/container.css" rel="stylesheet">
@@ -26,11 +27,15 @@
             <ul class="navigation">
 
                 <li class="navigation__item ">
-                    <a class="navigation__link" href="#oMnie">Kilka słów o mnie</a></li>
+                    <a class="navigation__link" href="#oMnie">Kilka słów o mnie</a>
+                </li>
                 <li class="navigation__item navigation__link">
-                    <a class="navigation__link" href="#cosWiecej">Inne zainteresowania</a></li>
-                <li class="navigation__item navigation__link"><a class="navigation__link" href="#ulubione">Ulubione</a></li>
-                <li class="navigation__item navigation__link"><a class="navigation__link"  href="#interakcja"> Interakcja</a></li>
+                    <a class="navigation__link" href="#cosWiecej">Inne zainteresowania</a>
+                </li>
+                <li class="navigation__item navigation__link"><a class="navigation__link" href="#ulubione">Ulubione</a>
+                </li>
+                <li class="navigation__item navigation__link"><a class="navigation__link" href="#interakcja">
+                        Interakcja</a></li>
             </ul>
         </nav>
 
@@ -63,7 +68,7 @@
                     odludziu😐😉</p>
                 <p class="section__paragraph">Nie jestem w stanie też zliczyć wszystkich godzin, które spędziłem w
                     fotelu jednocześnie zwiedzając różne fantastycznych miejsca np.
-                    na <em>Midgardzie</em> czy w odległych krainach <em>Wysp Skelige</em>.</p>
+                    na planecie <em>Midgard</em> czy w odległych krainach <em>Wysp Skelige</em>.</p>
             </section>
             <section id=ulubione class="section"></section>
             <h2 class="section__subHeader">Ulubione książki</h2>
